# messagebus

./: .drone.yml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/remote/: Cargo.toml
crates/remote/examples/: cert.der  cert.key  quic_client.rs  quic_server.rs  tcp_client.rs  tcp_server.rs
crates/remote/src/: error.rs  lib.rs  proto.rs
crates/remote/src/relays/: mod.rs
crates/remote/src/relays/quic/: client.rs  mod.rs  server.rs
crates/remote/src/relays/redis/: mod.rs
crates/remote/src/relays/tcp/: mod.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: benchmark.rs  demo.rs  demo_async.rs  demo_backpressure.rs  demo_batch.rs  demo_boxed.rs  demo_groups.rs  demo_local.rs  demo_relay.rs  demo_req_resp.rs  demo_shared.rs  demo_slow.rs  demo_sync_batch.rs  non_sync.rs  producer.rs  run.rs  unordered.rs
src/: Cargo.toml  builder.rs  bus.rs  cell.rs  envelop.rs  error.rs  group.rs  handler.rs  lib.rs  mbus.toml  mbus.yaml  message.rs  message_impls.rs  msgs.rs  permit.rs  poll_ring_buffer.rs  polling_pool.rs  receiver.rs  receiver_old.rs  receiver_store.rs  relay.rs  stats.rs  task.rs  trait_object.rs  type_tag.rs  typed_pool.rs  untyped.rs  utils.rs  wakelist.rs
src/receivers/: common.rs  dispatcher.rs  handle.rs  limit.rs  mod.rs  mpsc.rs  mpsc_futures.rs  ordered.rs  ordered_.rs  producer.rs  queue.rs  spawner.rs  spawner1.rs  unordered.rs  wrapper.rs
src/receivers/buffer_unordered/: async.rs  execution.rs  mod.rs  receiver.rs  sync.rs
src/receivers/buffer_unordered_batched/: async.rs  execution.rs  mod.rs  receiver.rs  sync.rs
src/receivers/local/: async.rs  mod.rs  sync.rs
src/receivers/local_batched/: async.rs  mod.rs  sync.rs
src/receivers/producer/: mod.rs
src/receivers/synchronize_batched/: async.rs  execution.rs  mod.rs  receiver.rs  sync.rs
src/receivers/synchronized/: async.rs  execution.rs  mod.rs  receiver.rs  sync.rs
src/relays/: mod.rs
src/relays/quic/: client.rs
src/type_tag/: info.rs  query.rs
src/utils/: future_cell.rs  mod.rs  trait_object.rs  wakelist.rs
tests/: test_backpressure.rs  test_batch.rs  test_batch_handlers.rs  test_concurrency.rs  test_derive.rs  test_error_derive.rs  test_groups.rs  test_handler_sync_method.rs  test_idle.rs  test_multiple_receivers.rs  test_relay.rs  test_req_resp.rs  test_send_options.rs  test_serde.rs  test_shared.rs  test_stats.rs  test_sync.rs  test_synchronized_handlers.rs
