[package]
name = "messagebus"
version = "0.10.0"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
repository = "https://github.com/andreytkachenko/messagebus.git"
keywords = ["futures", "async", "tokio", "message", "bus"]
categories = ["network-programming", "asynchronous"]
description = "MessageBus allows intercommunicate with messages between modules"
exclude = [".gitignore", ".cargo/config", ".github/**", ".drone.yml"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
messagebus_derive = "0.2.5"

anyhow = "1.0"
thiserror = "1.0"
async-channel = "1.8.0"
crossbeam = "0.8"
dashmap = "5.3.3"
erased-serde = "0.3.24"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
regex = "1"
segvec = "0.1.5"
serde = "1.0"
sharded-slab = "0.1.4"
tokio = { version = "1.17.0", features = ["sync", "rt" ] }
smallvec = { version = "1.10.0", features = ["const_new"] }
tokio-util = "0.7.7"
arc-swap = "1.6.0"
once_cell = "1.17.1"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
waker-fn = "1.1.0"


