[package]
name = "messagebus"
version = "0.9.13"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
repository = "https://github.com/andreytkachenko/messagebus.git"
keywords = ["futures", "async", "tokio", "message", "bus"]
categories = ["network-programming", "asynchronous"]
description = "MessageBus allows intercommunicate with messages between modules"
license = "MIT OR Apache-2.0"
exclude = [".gitignore", ".cargo/config", ".github/**", "codecov.yml"]
edition = "2021"
rust-version = "1.79"

[workspace]
members = ["crates/remote", "crates/derive"]

[dependencies]
messagebus_derive = { workspace = true }

tokio = { workspace = true, features = ["parking_lot", "rt-multi-thread", "sync", "time"] }
parking_lot = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
smallvec = { workspace = true }
log = { workspace = true }
sharded-slab = { workspace = true }
thiserror = { workspace = true }
erased-serde = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
dashmap = { workspace = true }
ctor = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "parking_lot", "rt-multi-thread", "io-util", "sync"] }

[workspace.dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
bitflags = "1.2.1"
bytes = "1.1.0"
ctor = "0.1.21"
dashmap = "4.0"
env_logger = "0.9"
erased-serde = "0.3.16"
futures = "0.3.17"
log = "0.4"
messagebus = { path = "" }
messagebus_derive = { path = "crates/derive" }
parking_lot = "0.11"
pin-project-lite = "0.2"
proc-macro2 = "1"
quinn = "0.7"
quinn-proto = "0.7.3"
quote = "1"
redis = "0.27"
rustls = "0.19.1"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_derive = "1.0.130"
serde_json = "1.0.68"
sharded-slab = "0.1"
smallvec = "1.6"
syn = "1"
thiserror = "1.0.29"
tokio = "1.11.0"
