[package]
name = "messagebus_remote"
version = "0.1.0"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
repository = "https://github.com/shakacode/messagebus.git"
keywords = ["futures", "async", "tokio", "message", "bus", "quic", "remote", "rpc", "parallel", "computing"]
categories = ["network-programming", "asynchronous"]
description = "MessageBus remote allows intercommunicate by messages between instances"
license = "MIT OR Apache-2.0"
exclude = [".gitignore", ".cargo/config", ".github/**", "codecov.yml"]
edition = "2021"
rust-version = "1.82"

# [features]
# quic = ["quinn"]

[dependencies]
thiserror = { workspace = true }
messagebus = { workspace = true }
tokio = { workspace = true, features = ["parking_lot", "rt-multi-thread", "sync", "time", "io-util"] }
parking_lot = { workspace = true }
quinn = { workspace = true }
erased-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
pin-project-lite = { workspace = true }
serde_cbor = { workspace = true }
bytes = { workspace = true }
quinn-proto = { workspace = true }
rustls = { workspace = true }
redis = { workspace = true, features = ["aio", "tokio-comp"] }
bitflags = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# quinn = { version = "0.7", optional = true }

